--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" contents="Join the club for runners in Dublin! Love urban running and trail running in the Docklandds and Phoenix Park.">
+    <meta name="keywords" contents="urban running, trail running, Dublin Ireland, running in team, running club, runners, exercise, sport"
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
