create general page structure

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
 </head>
 
 <body>
+    <!--contains header of page-->
+    <header>
+        Header
+    </header>
+    <!--contains main content of the page-->
+    <main>
+        Main Content
+    </main>
+    <!--contains footer of page-->
+    <footer>
+        Footer
+    </footer>
 
 </body>
 
