small changes to create same template video

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" contents="Join the club for runners in Dublin! Love urban running and trail running in the Docklandds and Phoenix Park.">
     <meta name="keywords" contents="urban running, trail running, Dublin Ireland, running in team, running club, runners, exercise, sport"
@@ -16,15 +17,15 @@
 </head>
 
 <body>
-    <!--contains header of page-->
+    <!--HEADER-->
     <header>
         Header
     </header>
-    <!--contains main content of the page-->
+    <!--MAIN-->
     <main>
         Main Content
     </main>
-    <!--contains footer of page-->
+    <!--Footer-->
     <footer>
         Footer
     </footer>
