--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" contents="Join the club for runners in Dublin! Love urban running and trail running in the Docklandds and Phoenix Park.">
-    <meta name="keywords" contents="urban running, trail running, Dublin Ireland, running in team, running club, runners, exercise, sport"
-    <!--Title-->
+    <meta name="keywords" contents="urban running, trail running, Dublin Ireland, running in team, running club, runners, exercise, sport">
+     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-
+    <link rel="stylesheet" href="assets/assets/css/style.css">
 </head>
 
 <body>
