Google Fonts inserted

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <!--MAIN-->
     <main>
-        Main Content
+       <h1> Main Content</h1>
     </main>
     <!--Footer-->
     <footer>
