header in logo - font Oswald applied

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
 <body>
     <!--HEADER-->
     <header>
-        Header
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+            </a>
     </header>
     <!--MAIN-->
     <main>
-       <h1> Main Content</h1>
+       <h2> Main Content</h2>
     </main>
     <!--Footer-->
     <footer>
