--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
             </a>
+            <nav>
+                <ol>
+                    <Li><a href="index.html"> Home</a></Li>
+                    <li><a href="gallery.html"> Gallery</a></li>
+                    <li><a href="signup.html"> Sign up</a></li>
+                </ol>
+            </nav>
     </header>
     <!--MAIN-->
     <main>
