--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <h1 id="logo">Love Running</h1>
             </a>
             <nav>
-                <ul>
-                    <Li><a href="index.html"> Home</a></Li>
+                <ul id="menu">
+                    <Li><a href="index.html" class="active"> Home</a></Li>
                     <li><a href="gallery.html"> Gallery</a></li>
                     <li><a href="signup.html"> Sign up</a></li>
                 </ul>
