add fontawesome and first footer link

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" contents="Join the club for runners in Dublin! Love urban running and trail running in the Docklandds and Phoenix Park.">
-    <meta name="keywords" contents="urban running, trail running, Dublin Ireland, running in team, running club, runners, exercise, sport">
-     <!--Title-->
+    <meta name="description"
+        contents="Join the club for runners in Dublin! Love urban running and trail running in the Docklandds and Phoenix Park.">
+    <meta name="keywords"
+        contents="urban running, trail running, Dublin Ireland, running in team, running club, runners, exercise, sport">
+    <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/assets/favicon/apple-touch-icon.png">
@@ -21,26 +23,29 @@
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
-            </a>
-            <input type="checkbox" id="nav-toggle" name="nav-toggle">
-            <label for="nav-toggle" class="nav-toggle-label">X</label>
-            <nav>
-                <ul id="menu">
-                    <Li><a href="index.html" class="active"> Home</a></Li>
-                    <li><a href="gallery.html"> Gallery</a></li>
-                    <li><a href="signup.html"> Sign up</a></li>
-                </ul>
-            </nav>
+        </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <nav>
+            <ul id="menu">
+                <Li><a href="index.html" class="active"> Home</a></Li>
+                <li><a href="gallery.html"> Gallery</a></li>
+                <li><a href="signup.html"> Sign up</a></li>
+            </ul>
+        </nav>
     </header>
     <!--MAIN-->
     <main>
-       <h2> Main Content</h2>
+        <h2> Main Content</h2>
     </main>
     <!--Footer-->
     <footer>
-        Footer
+        <li><a href="https://www.facebook.com" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook page (opefns in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
     </footer>
 
+    <!--font awesome kit-->
+    <script src="https://kit.fontawesome.com/c58d0ee7a9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
