--- a/signup.html
+++ b/signup.html
@@ -28,19 +28,15 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <Li><a href="index.html" class="active"> Home</a></Li>
+                <Li><a href="index.html" > Home</a></Li>
                 <li><a href="gallery.html"> Gallery</a></li>
-                <li><a href="signup.html"> Sign up</a></li>
+                <li><a href="signup.html" class="active"> Sign up</a></li>
             </ul>
         </nav>
     </header>
     <!--MAIN-->
     <main>
-        <h2> 
-            <section id="hero">
-                
-            </section>
-        </h2>
+        <h2> Main Content</h2>
     </main>
     <!--Footer-->
     <footer>
