--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
     <main>
         <h2> 
             <section id="hero">
-                
+                <div id="cover-text">
+                    <h2>Love Running</h2>
+                    <h3>Dublin Docklands & Phoenix Park</h3>
+                </div>
             </section>
         </h2>
     </main>
+    
     <!--Footer-->
     <footer>
         <ul id="social-networks">
