--- a/gallery.html
+++ b/gallery.html
@@ -28,7 +28,7 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <Li><a href="index.html" > Home</a></Li>
+                <Li><a href="index.html"> Home</a></Li>
                 <li><a href="gallery.html" class="active"> Gallery</a></li>
                 <li><a href="signup.html"> Sign up</a></li>
             </ul>
@@ -36,7 +36,22 @@
     </header>
     <!--MAIN-->
     <main>
-        <h2> Main Content</h2>
+        <section id="gallery">
+            <div id="photos">
+                <img src="assets/assets/images/athletes.webp" alt="Two girls running">
+                <img src="assets/assets/images/girls.webp" alt="Three girls at charity paint running festival">
+                <img src="assets/assets/images/runner3.webp" alt="Solo male runner jogging on beach">
+                <img src="assets/assets/images/man.webp" alt="Man at charity paint running festival">
+                <img src="assets/assets/images/runner1.webp" alt="Solo female runner jogging through Phoenix Park">
+                <img src="assets/assets/images/runner2.webp" alt="Runners competing in marathon">
+                <img src="assets/assets/images/runner4.webp" alt="Solo female runner jogging on beach">
+                <img src="assets/assets/images/running_gang.webp"
+                    alt="Large group of runners taking part in a marathon on a rainy day">
+                <img src="assets/assets/images/mud-run.webp"
+                    alt="Two women runners taking a muddy selfie after the Mud Runners championship">
+            </div>
+        </section>
+       
     </main>
     <!--Footer-->
     <footer>
