--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
         <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menu">
-                <Li><a href="index.html" > Home</a></Li>
+                <Li><a href="index.html"> Home</a></Li>
                 <li><a href="gallery.html"> Gallery</a></li>
                 <li><a href="signup.html" class="active"> Sign up</a></li>
             </ul>
@@ -36,7 +36,33 @@
     </header>
     <!--MAIN-->
     <main>
-        <h2> Main Content</h2>
+        <section id="signup">
+            <form id="signup-form" method="post" action="https://formdump.codeinstitute.net">
+                <h2><i class="fa-solid fa-heart-pulse"></i>Let's get you signed up!</h2>
+                <label for="first-name">First Name</label>
+                <input type="text" id="first-name" class="text-input" name="first_name" required><br>
+                <label for="last-name">Last Name</label>
+                <input type="text" id="last-name" class="text-input" name="last_name" required><br>
+                <label for="email-address">Email Address</label>
+                <input type="email" id="email-address" class="text-input" name="email" required><br>
+                <section class="radio-buttons" required>
+                    <div>
+                        <label for="road">Road</label>
+                        <input type="radio" id="road" name="running_preference" required><br>
+                    </div>
+                    <div>
+                        <label for="trail">Trail</label>
+                        <input type="radio" id="trail" name="running_preference" required><br>
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" id="both" name="running_preference" required><br>
+                    </div>
+                </section>
+                <input type="submit" class="join-button" value="Let's run!">
+            </form>
+
+        </section>
     </main>
     <!--Footer-->
     <footer>
