--- a/gallery.html
+++ b/gallery.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        contents="Join the club for runners in Dublin! Love urban running and trail running in the Docklandds and Phoenix Park.">
+        content="Join the club for runners in Dublin! Love urban running and trail running in the Docklandds and Phoenix Park.">
     <meta name="keywords"
-        contents="urban running, trail running, Dublin Ireland, running in team, running club, runners, exercise, sport">
+        content="urban running, trail running, Dublin Ireland, running in team, running club, runners, exercise, sport">
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
@@ -64,7 +64,7 @@
                         class="fa-brands fa-instagram"></i></a></li>
             <li><a href="https://www.x.com" target="_blank" rel="noopener"
                     aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
-            <li><a href="https://www.youtu.be" target="_blank" rel="noopener"
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)"><i
                         class="fa-brands fa-square-youtube"></i></a></li>
         </ul>
