--- a/signup.html
+++ b/signup.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        contents="Join the club for runners in Dublin! Love urban running and trail running in the Docklandds and Phoenix Park.">
+        content="Join the club for runners in Dublin! Love urban running and trail running in the Docklandds and Phoenix Park.">
     <meta name="keywords"
-        contents="urban running, trail running, Dublin Ireland, running in team, running club, runners, exercise, sport">
+        content="urban running, trail running, Dublin Ireland, running in team, running club, runners, exercise, sport">
     <!--Title-->
     <title>Love Running</title>
     <!--Favicon-->
@@ -45,7 +45,7 @@
                 <input type="text" id="last-name" class="text-input" name="last_name" required><br>
                 <label for="email-address">Email Address</label>
                 <input type="email" id="email-address" class="text-input" name="email" required><br>
-                <section class="radio-buttons" required>
+                <section class="radio-buttons">
                     <div>
                         <label for="road">Road</label>
                         <input type="radio" id="road" name="running_preference" required><br>
@@ -74,7 +74,7 @@
                         class="fa-brands fa-instagram"></i></a></li>
             <li><a href="https://www.x.com" target="_blank" rel="noopener"
                     aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a></li>
-            <li><a href="https://www.youtu.be" target="_blank" rel="noopener"
+            <li><a href="https://www.youtube.com" target="_blank" rel="noopener"
                     aria-label="Visit our Youtube page (opens in a new tab)"><i
                         class="fa-brands fa-square-youtube"></i></a></li>
         </ul>
