adding hidden headings

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <section id="reasons">
             <h2>Why love running with us?</h2>
             <section id="benefits">
+                <h2 class="hidden-heading">Benefits</h2>
                 <section id="benefits-physical">
                     <div>
                         <h3>FEEL HEALTHY <i class="fa-solid fa-heart-pulse"></i></h3>
