--- a/gallery.html
+++ b/gallery.html
@@ -37,6 +37,7 @@
     <!--MAIN-->
     <main>
         <section id="gallery">
+            <h2 class="hidden-heading">Gallery</h2>
             <div id="photos">
                 <img src="assets/assets/images/athletes.webp" alt="Two girls running">
                 <img src="assets/assets/images/girls.webp" alt="Three girls at charity paint running festival">
