--- a/signup.html
+++ b/signup.html
@@ -46,6 +46,7 @@
                 <label for="email-address">Email Address</label>
                 <input type="email" id="email-address" class="text-input" name="email" required><br>
                 <section class="radio-buttons">
+                    <h2 class="hidden-heading">Choose an option</h2>
                     <div>
                         <label for="road">Road</label>
                         <input type="radio" id="road" name="running_preference" required><br>
