--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </section>
     </main>
     <footer id="contact" class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mb-4">
             <div class="col-12 text-center my-4">
                 <h2 class="display-5">Contact</h2>
                 <p class="mt-4">Got questions or ideas? I'd love to hear from you! Whether you're
@@ -190,49 +190,26 @@
                     touch. I'm always open to discussing new opportunities and how we
                     can work together to create something amazing!</p>
             </div>
-            <div class="col-12 col-md-10 col-lg-8">
+            <div class="col-12 col-lg-12 mb-4">
                 <form class="row g-3">
-                    <div class="col-md-6">
-                      <label for="inputEmail4" class="form-label">Email</label>
-                      <input type="email" class="form-control" id="inputEmail4">
+                    <div class="col-12 col-lg-4">
+                      <label for="inputFullName" class="form-label">Full Name</label>
+                      <input type="text" class="form-control" id="inputFullName">
                     </div>
-                    <div class="col-md-6">
-                      <label for="inputPassword4" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="inputPassword4">
+                    <div class="col-12 col-lg-4">
+                      <label for="inputPhoneNumber" class="form-label">Phone Number</label>
+                      <input type="text" class="form-control" id="inputPhoneNumber">
                     </div>
-                    <div class="col-12">
-                      <label for="inputAddress" class="form-label">Address</label>
-                      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-                    </div>
-                    <div class="col-12">
-                      <label for="inputAddress2" class="form-label">Address 2</label>
-                      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-                    </div>
-                    <div class="col-md-6">
-                      <label for="inputCity" class="form-label">City</label>
-                      <input type="text" class="form-control" id="inputCity">
-                    </div>
-                    <div class="col-md-4">
-                      <label for="inputState" class="form-label">State</label>
-                      <select id="inputState" class="form-select">
-                        <option selected>Choose...</option>
-                        <option>...</option>
-                      </select>
-                    </div>
-                    <div class="col-md-2">
-                      <label for="inputZip" class="form-label">Zip</label>
-                      <input type="text" class="form-control" id="inputZip">
-                    </div>
-                    <div class="col-12">
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                          Check me out
-                        </label>
+                    <div class="col 12 col-lg-4">
+                        <label for="inputEmail4" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="inputEmail4">
                       </div>
+                    <div class="col-12">
+                      <label for="inputMessage" class="form-label">Message</label>
+                      <textarea type="text" class="form-control" id="inputMessage" rows="3"></textarea>
                     </div>
                     <div class="col-12">
-                      <button type="submit" class="btn btn-primary">Sign in</button>
+                      <button type="submit" class="btn btn-primary">Send</button>
                     </div>
                   </form>
             </div>
