--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!--nav bar-->
     <nav class="navbar navbar-expand-sm bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="index.html">Mei Wong</a>
@@ -61,7 +62,14 @@
                 <!-- mb-5 gives extra margin spacing under lead text -->
                 <p class="lead mb-5">Let's create something amazing together!</p>
             </div>
+            <!--button for modal-->
+            <button type="button" class="btn btn-primary col-3 justify-content-center mx-auto" data-bs-toggle="modal"
+                data-bs-target="#exampleModal">
+                Subscribe to my newsletter!
+            </button>
         </section>
+
+
     </header>
 
     <!-- main content -->
@@ -192,29 +200,58 @@
             </div>
             <div class="col-12 col-lg-12 mb-4">
                 <form class="row g-3">
-                    <div class="col-12 col-lg-4">
-                      <label for="inputFullName" class="form-label">Full Name</label>
-                      <input type="text" class="form-control" id="inputFullName">
+                    <div class="col-lg-4">
+                        <label for="inputFullName" class="form-label">Full Name</label>
+                        <input type="text" class="form-control" id="inputFullName">
                     </div>
-                    <div class="col-12 col-lg-4">
-                      <label for="inputPhoneNumber" class="form-label">Phone Number</label>
-                      <input type="text" class="form-control" id="inputPhoneNumber">
+                    <div class="col-lg-4">
+                        <label for="inputPhoneNumber" class="form-label">Phone Number</label>
+                        <input type="text" class="form-control" id="inputPhoneNumber">
                     </div>
-                    <div class="col 12 col-lg-4">
+                    <div class="col-lg-4">
                         <label for="inputEmail4" class="form-label">Email</label>
                         <input type="email" class="form-control" id="inputEmail4">
-                      </div>
-                    <div class="col-12">
-                      <label for="inputMessage" class="form-label">Message</label>
-                      <textarea type="text" class="form-control" id="inputMessage" rows="3"></textarea>
                     </div>
                     <div class="col-12">
-                      <button type="submit" class="btn btn-primary">Send</button>
+                        <label for="inputMessage" class="form-label">Message</label>
+                        <textarea type="text" class="form-control" id="inputMessage" rows="3"></textarea>
                     </div>
-                  </form>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary">Send</button>
+                    </div>
+                </form>
             </div>
         </div>
     </footer>
+
+    <!--Modal under Footer-->
+    <div class="modal modal-lg" id="exampleModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Subscribe</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Join my newsletter for the latest updates on my projects, coding tips, and industry insights
+                        delivered straight to your inbox.</p>
+                        <form class="row g-3">
+                            <div class="col-lg-6">
+                                <label for="inputName" class="form-label">Name</label>
+                                <input type="text" class="form-control" id="inputName">
+                            </div>
+                            <div class="col-lg-6">
+                                <label for="inputEmail" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="inputEmail">
+                            </div>
+                        </form>
+                    <div class="col-12 mb-4 mt-4">
+                    <button type="button" class="btn btn-primary">Sign up!</button>
+                    </div>
+                </div>
+            </div>
+            </div>
+    </div>
     <!-- Bootstrap JS Script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
